--- a/code/Memory_Generator_LSTM.ipynb
+++ b/code/Memory_Generator_LSTM.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Memory-Generator-LSTM.ipynb",
-      "version": "0.3.2",
+      "name": "Memory_Generator_LSTM.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -35,19 +34,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ashfarhangi/AI-for-Trading/blob/master/Memory_Generator_LSTM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ashfarhangi/AI-for-Trading/blob/master/code/Memory_Generator_LSTM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "OZLAgUNWd6vY",
-        "colab_type": "code",
-        "outputId": "9320af41-1005-4aa4-95bb-51cc518f4e76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "9320af41-1005-4aa4-95bb-51cc518f4e76"
       },
       "source": [
         "# Importing libraries\n",
@@ -61,10 +59,10 @@
         "from tqdm import tqdm\n",
         "import time\n",
         "sns.set()\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/gdrive')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,9 +76,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rJNGn-MRd6vc",
-        "colab_type": "code",
-        "colab": {}
+        "id": "rJNGn-MRd6vc"
       },
       "source": [
         "\n",
@@ -102,25 +98,24 @@
         "        onehot[i, vocab.index(data[i])] = 1.0\n",
         "    return onehot"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LyYmulQgd6vf",
-        "colab_type": "code",
-        "outputId": "f535150d-c941-4a32-826e-8aa8694a43b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "f535150d-c941-4a32-826e-8aa8694a43b5"
       },
       "source": [
         "text, text_vocab = get_memory('/content/gdrive/My Drive/Colab Notebooks/data/memory_r.txt')\n",
         "print(\"Duplicates: \",len(text_vocab)-len(text))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,12 +130,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "jbiCIcoRd6vi",
-        "colab_type": "code",
-        "outputId": "bcadb450-9d9b-4e5f-ec48-f4cd177e85e6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "outputId": "bcadb450-9d9b-4e5f-ec48-f4cd177e85e6"
       },
       "source": [
         "#Modeling:\n",
@@ -154,7 +148,7 @@
         "print('possible batch',possible_batch_id)\n",
         "print(len(text))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,9 +163,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LbAyIJyld6vl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LbAyIJyld6vl"
       },
       "source": [
         "class Model:\n",
@@ -209,19 +201,18 @@
         "                                        (seq_shape[0], seq_shape[1], \n",
         "                                         dimension))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "N79luZ_-d6vn",
-        "colab_type": "code",
-        "outputId": "581896ce-40b4-4e7f-ec70-1f4a73730870",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        }
+        },
+        "outputId": "581896ce-40b4-4e7f-ec70-1f4a73730870"
       },
       "source": [
         "tf.reset_default_graph()\n",
@@ -229,7 +220,7 @@
         "model = Model(num_layers, size_layer, len(text_vocab), sequence_length, learning_rate)\n",
         "sess.run(tf.global_variables_initializer())"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,8 +237,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5epXq-fghgNJ",
-        "colab_type": "text"
+        "id": "5epXq-fghgNJ"
       },
       "source": [
         "#Encoding:"
@@ -256,9 +246,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8t5B4Ju6d6vt",
-        "colab_type": "code",
-        "colab": {}
+        "id": "8t5B4Ju6d6vt"
       },
       "source": [
         "def seq2seq():\n",
@@ -287,24 +275,23 @@
         "        pbar.set_postfix(cost = loss, accuracy = accuracy)\n",
         "    return SoftMaxLoss, FinalAccuracy"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "_lj94yitd6vv",
-        "colab_type": "code",
-        "outputId": "37365cce-9051-43bd-b4fa-77aab3ceb58a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "37365cce-9051-43bd-b4fa-77aab3ceb58a"
       },
       "source": [
         "SoftMaxLoss, FinalAccuracy = seq2seq()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,12 +306,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "kTX3UckSd6v0",
-        "colab_type": "code",
-        "outputId": "cb7b70c9-339b-4490-ac24-d492cb0d57f3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 345
-        }
+        },
+        "outputId": "cb7b70c9-339b-4490-ac24-d492cb0d57f3"
       },
       "source": [
         "plt.figure(figsize = (15, 5))\n",
@@ -337,7 +323,7 @@
         "plt.xlabel('epoch'); plt.ylabel('accuracy')\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -357,12 +343,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ts3Pp2jId6v4",
-        "colab_type": "code",
-        "outputId": "62f1a536-07f7-4bd9-bfb9-5b8e2fb4855a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "62f1a536-07f7-4bd9-bfb9-5b8e2fb4855a"
       },
       "source": [
         "split_text = text\n",
@@ -371,7 +356,7 @@
         "tag = split_text[selected_index:selected_index + 10]\n",
         "print(tag)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,8 +370,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aTaSFTxXhkmz",
-        "colab_type": "text"
+        "id": "aTaSFTxXhkmz"
       },
       "source": [
         "#Decoding:"
@@ -395,9 +379,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JkBqmH9md6v7",
-        "colab_type": "code",
-        "colab": {}
+        "id": "JkBqmH9md6v7"
       },
       "source": [
         "def generate_based_sequence(length_sentence, argmax = False):\n",
@@ -432,24 +414,23 @@
         "\n",
         "    return ' '.join(sentence_generated)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AJz3SdrEd6v-",
-        "colab_type": "code",
-        "outputId": "14266a0a-7e80-4b11-eebd-3722031d2d7c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "14266a0a-7e80-4b11-eebd-3722031d2d7c"
       },
       "source": [
         "print(generate_based_sequence(10,True))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,17 +445,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "w04zK0Vad6wC",
-        "colab_type": "code",
-        "outputId": "ffe0e20c-9e5b-4418-9f6a-9e393b34003f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "ffe0e20c-9e5b-4418-9f6a-9e393b34003f"
       },
       "source": [
         "print(generate_based_sequence(10,False))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,71 +468,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "16qTCTyEWYmV",
-        "colab_type": "code",
-        "outputId": "7b42a50f-cf66-4f02-9d10-66c406179a3a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "ytest=[2076\n",
-        ",1909\n",
-        ",197410\n",
-        ",201185\n",
-        ",218045\n",
-        ",285035\n",
-        ",130479\n",
-        ",229038\n",
-        ",186745\n",
-        ",2086]\n",
-        "print(ytest)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[2076, 1909, 197410, 201185, 218045, 285035, 130479, 229038, 186745, 2086]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TP_KI4TEofyQ",
-        "colab_type": "code",
-        "colab": {}
+        "id": "TP_KI4TEofyQ"
       },
       "source": [
         "arg1 = generate_based_sequence(10,True)\n",
         "arg4 = generate_based_sequence(10,False)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AqbxfwB9Zq1G",
-        "colab_type": "code",
-        "colab": {}
+        "id": "AqbxfwB9Zq1G"
       },
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M8oc7aKgUJgv",
-        "colab_type": "code",
-        "colab": {}
+        "id": "M8oc7aKgUJgv"
       },
       "source": [
         "arg4 = arg4.split()\n",
@@ -567,15 +506,13 @@
         "for i in range(len(arg4)):\n",
         "  arg4[i] = int(arg4[i])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DM4QPDKlOjXw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "DM4QPDKlOjXw"
       },
       "source": [
         "arg2 = text[1990:2000]\n",
@@ -583,48 +520,25 @@
         "for i in range(len(arg2)):\n",
         "  arg2[i] = int(arg2[i])"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Q1w8raHcYhX7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "ytest=[2076\n",
-        ",1909\n",
-        ",197410\n",
-        ",201185\n",
-        ",218045\n",
-        ",285035\n",
-        ",130479\n",
-        ",229038\n",
-        ",186745\n",
-        ",2086]"
-      ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "lOAoRwJBZAPC",
-        "colab_type": "code",
-        "outputId": "b21037b2-f790-41c3-f401-3a8b96d295eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        }
+        },
+        "outputId": "b21037b2-f790-41c3-f401-3a8b96d295eb"
       },
       "source": [
         "print(ytest)\n",
         "print(arg3[10:])\n",
         "print(arg4[10:])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -641,12 +555,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "W8RJm3KRRnF5",
-        "colab_type": "code",
-        "outputId": "6a4f6aac-b4de-434a-a602-493a9738cc74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 275
-        }
+        },
+        "outputId": "6a4f6aac-b4de-434a-a602-493a9738cc74"
       },
       "source": [
         "plt.plot(ytest[:],c='black')\n",
@@ -654,7 +567,7 @@
         "# plt.plot(arg3[10:],c='yellow')\n",
         "plt.show()"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,26 +586,12 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SKtMlCqWhJnG",
-        "colab_type": "text"
+        "id": "SKtMlCqWhJnG"
       },
       "source": [
         "References:\n",
         "https://towardsdatascience.com/aifortrading-2edd6fac689d"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ljLTCJzuhIe5",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
